# notificationd

./: .gitignore  Cargo.toml  LICENSE  build.rs  notify.sh
docs/: spec.typst
examples/: p2pool_webhook.ru  simple.rb
src/: client.rs  levitating.notificationd.varlink  levitating_notificationd.rs  lib.rs  logging.rs  main.rs  notifications.rs  server.rs
src/protocol/: mod.rs  parser.rs
src/server/: client.rs  database.rs
systemd/: notificationd-client.service  notificationd.service
