[package]
name = "notificationd"
description = "A daemon for relaying desktop notifications"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
nix = { version = "0.30.1", features = ["hostname"] }
nom = "8.0.0"
rusqlite = "0.37.0"
syslog-tracing = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zbus = "5.11.0"
