[package]
name = "notificationd"
description = "A daemon for relaying desktop notifications"
version = "0.7.7"
edition = "2024"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
nix = { version = "0.30.1", features = ["hostname", "user"] }
nom = "8.0.0"
rusqlite = "0.37.0"
sd-notify = "0.4.5"
serde = "1.0.228"
serde_derive = "1.0.228"
syslog-tracing = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
varlink = "13.0.0"
zbus = "5.11.0"

[build-dependencies]
varlink_generator = "13.0.0"
